--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
-  },
-  "engines": {
-    "node": "14.16.1",
-    "npm": "7.18.1"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
